HTML main is done

--- a/index.html
+++ b/index.html
@@ -5,9 +5,215 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-  
+  <header>
+    <article>
+      <h3>Awesome</h3>
+      <nav>
+        <details>
+          <summary class="fa-solid fa-bars">
+            <ul>
+              <li><a href="#features">Features</a></li>
+              <li><a href="#services">Services</a></li>
+              <li><a href="#call-action">Call to Action</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#testimoinials">Testimonials</a></li>
+              <li><a href="#contact">Contact</a></li>
+            </ul>
+          </summary>
+        </details>
+        <ul>
+          <li><a href="#features">Features</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#call-action">Call to Action</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#testimoinials">Testimonials</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+    </article>
+    <article>
+      <h1>Awesome Skyblue Blog</h1>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa molestias voluptatibus cupiditate dicta, minima nesciunt sunt est reiciendis voluptatum perferendis exercitationem iste accusantium, quaerat non corrupti commodi distinctio soluta voluptas?
+      </p>
+    </article>
+  </header>
+
+  <main>
+    <section id="features" class="features">
+      <h2>Features</h2>
+      <article>
+        <div>
+          <i class="fa-solid fa-mobile-screen-botton"></i>
+          <h4>Responsive Design</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum consectetur quo, doloremque unde nemo expedita porro nesciunt!
+          </p>
+        </div>
+        <div>
+          <i class="fa-solid fa-code"></i>
+          <h4>Clean Code</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum consectetur quo, doloremque unde nemo expedita porro nesciunt!
+          </p>
+        </div>
+        <div>
+          <i class="fa-solid fa-life-ring"></i>
+          <h4>24/7 Support</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum consectetur quo, doloremque unde nemo expedita porro nesciunt!
+          </p>
+        </div>
+        <div>
+          <i class="fa-solid fa-pencil"></i>
+          <h4>Modern Design</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum consectetur quo, doloremque unde nemo expedita porro nesciunt!
+          </p>
+        </div>
+      </article>
+    </section>
+
+    <section id="computer" class="computer">
+      <article>
+        <img src="./img2/laptop.png" alt="laptop">
+      </article>
+      <article>
+        <div>
+          <i class="fa-solid fa-rocket"></i>
+          <aside>
+            <h3>Quick Install</h3>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Porro labore minus deserunt voluptas exercitationem aspernatur enim omnis itaque!
+            </p>
+          </aside>
+        </div>
+        <div>
+          <i class="fa-solid fa-rocket"></i>
+          <aside>
+            <h3>Quick Install</h3>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Porro labore minus deserunt voluptas exercitationem aspernatur enim omnis itaque!
+            </p>
+          </aside>
+        </div>
+      </article>
+    </section>
+
+    <section id="services" class="services">
+      <h2>Services</h2>
+      <article>
+        <i class="fa-solid fa-life-ring"></i>
+        <h3>24/7 Support</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, magnam. Magni vero, quisquam eum sint totam sequi saepe!
+        </p>
+      </article>
+      <article>
+        <i class="fa-solid fa-rocket"></i>
+        <h3>Quick Install</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, magnam. Magni vero, quisquam eum sint totam sequi saepe!
+        </p>
+      </article>
+      <article>
+        <i class="fa-solid fa-gears"></i>
+        <h3>Easy to Customize</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, magnam. Magni vero, quisquam eum sint totam sequi saepe!
+        </p>
+      </article>
+      <article>
+        <i class="fa-solid fa-wand-magic-sparkles"></i>
+        <h3>Another Feature</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, magnam. Magni vero, quisquam eum sint totam sequi saepe!
+        </p>
+      </article>
+      <article>
+        <i class="fa-solid fa-life-ring"></i>
+        <h3>24/7 Support</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, magnam. Magni vero, quisquam eum sint totam sequi saepe!
+        </p>
+      </article>
+      <article>
+        <i class="fa-solid fa-rocket"></i>
+        <h3>Quick Install</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, magnam. Magni vero, quisquam eum sint totam sequi saepe!
+        </p>
+      </article>
+    </section>
+
+    <section id="call-action" class="call-action">
+      <h2>Call to Action</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident assumenda quis possimus, tempora quidem consequuntur architecto aspernatur veniam!
+      </p>
+    </section>
+
+    <section id="about" class="about">
+      <h2>About Us</h2>
+      <div>
+        <figure>
+          <img src="./img2/1.jpg" alt="Pic01">
+          <figcaption>
+            John Doe
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, numquam voluptatem.
+            </p>
+          </figcaption>
+        </figure>
+      </div>
+      <div>
+        <figure>
+          <img src="./img2/2.jpg" alt="Pic02">
+          <figcaption>
+            John Doe
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, numquam voluptatem.
+            </p>
+          </figcaption>
+        </figure>
+      </div>
+      <div>
+        <figure>
+          <img src="./img2/3.jpg" alt="Pic03">
+          <figcaption>
+            John Doe
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, numquam voluptatem.
+            </p>
+          </figcaption>
+        </figure>
+      </div>
+    </section>
+
+    <section id="testimonials" class="testimonials">
+      <h2>Testimonials</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt cupiditate consequuntur numquam quod dicta a! Delectus asperiores voluptatibus repellendus id perspiciatis cumque ratione recusandae accusamus. Nobis fugiat maiores modi veniam qui harum!
+      </p>
+    </section>
+  </main>
+
+  <footer>
+    <div>
+      <i class="fa-brands fa-facebook-f"></i>
+      <i class="fa-regular fa-globe"></i>
+      <i class="fa-brands fa-twitter-square"></i>
+      <i class="fa-brands fa-instagram"></i>
+      <i class="fa-brands fa-google-plus-g"></i>
+      <i class="fa-brands fa-pinterest"></i>
+    </div>
+    <span>
+      &copy; Import Blog by <a href="#">Skyblue Stock</a>
+    </span>
+  </footer>
 </body>
 </html>
