--- a/index.html
+++ b/index.html
@@ -204,12 +204,12 @@
 
   <footer>
     <div>
-      <i class="fa-brands fa-facebook-f"></i>
-      <i class="fa-regular fa-globe"></i>
-      <i class="fa-brands fa-twitter-square"></i>
-      <i class="fa-brands fa-instagram"></i>
-      <i class="fa-brands fa-google-plus-g"></i>
-      <i class="fa-brands fa-pinterest"></i>
+      <a class="fa-brands fa-facebook-f"></a>
+      <a class="fa-solid fa-globe"></a>
+      <a class="fa-brands fa-twitter-square"></a>
+      <a class="fa-brands fa-instagram"></a>
+      <a class="fa-brands fa-google-plus-g"></a>
+      <a class="fa-brands fa-pinterest"></a>
     </div>
     <span>
       &copy; Import Blog by <a href="#">Skyblue Stock</a>
