Mobile version is done

--- a/index.html
+++ b/index.html
@@ -14,16 +14,15 @@
       <h3>Awesome</h3>
       <nav>
         <details>
-          <summary class="fa-solid fa-bars">
-            <ul>
-              <li><a href="#features">Features</a></li>
-              <li><a href="#services">Services</a></li>
-              <li><a href="#call-action">Call to Action</a></li>
-              <li><a href="#about">About</a></li>
-              <li><a href="#testimoinials">Testimonials</a></li>
-              <li><a href="#contact">Contact</a></li>
-            </ul>
-          </summary>
+          <summary class="fa-solid fa-bars"></summary>
+          <ul>
+            <li><a href="#features">Features</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#call-action">Call to Action</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#testimoinials">Testimonials</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
         </details>
         <ul>
           <li><a href="#features">Features</a></li>
@@ -48,7 +47,7 @@
       <h2>Features</h2>
       <article>
         <div>
-          <i class="fa-solid fa-mobile-screen-botton"></i>
+          <i class="fa-solid fa-mobile-screen-button"></i>
           <h4>Responsive Design</h4>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum consectetur quo, doloremque unde nemo expedita porro nesciunt!
